[gd_scene load_steps=9 format=3 uid="uid://5jocq65rdsl"]

[ext_resource type="Texture2D" uid="uid://dy2p8j2u7am4q" path="res://Assets/ICON_Paper.png" id="1_5cmb8"]
[ext_resource type="Script" path="res://Scripts/GameSelector.gd" id="1_djcae"]
[ext_resource type="FontFile" uid="uid://bnr06kp1ppaba" path="res://Assets/PressStart2P-Regular.ttf" id="2_3enrq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_68sel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1rfx3"]
atlas = ExtResource("1_5cmb8")
region = Rect2(15, 30, 75, 100)

[sub_resource type="Animation" id="Animation_cvrcc"]
resource_name = "Dilate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 6.49803),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15)]
}

[sub_resource type="Animation" id="Animation_qd0sh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5i1xl"]
_data = {
"Dilate": SubResource("Animation_cvrcc"),
"RESET": SubResource("Animation_qd0sh")
}

[node name="VBoxContainer" type="VBoxContainer" groups=["Level"]]
pivot_offset = Vector2(37, 66)
mouse_default_cursor_shape = 2
script = ExtResource("1_djcae")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
material = SubResource("ShaderMaterial_68sel")
layout_mode = 0
offset_left = -4.0
offset_right = 79.0
offset_bottom = 137.0
color = Color(0.168627, 0.470588, 0.45098, 0.356863)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_1rfx3")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3enrq")
placeholder_text = "x1"
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5i1xl")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
